# bayescode

./: .clang-format  .gitignore  .gitmodules  .travis.yml  .vimrc  CMakeLists.txt  License.MD  Makefile  README.md  codecov.yml
data/: cyp_coding.nhx  toy_bl.ali  toy_bl.nhx  toy_conv.nhx  toy_conv.phy  toydata.ali
data/besnard/: cyp_coding.Chrysithr_root.nhx  cyp_coding.fna  cyp_coding.phy  cyp_small.phy
data/bglobin/: bglobin.phy  bglobin.prefs  bglobin.transitions.tsv  bglobin.tre  deltaomegaarray.csv
data/body_size/: mammals.female.traits.tsv  mammals.female.tree  mammals.female.var_within.tsv  mammals.log.traits.tsv  mammals.male.traits.tsv  mammals.male.tree  mammals.male.var_within.tsv  mammals.traits.tsv  mammals.tree
data/c3c4/: amaranth.2cond  amaranth.3cond  amaranth.regime
data/placentalia/: plac.calib  plac.calib.tsv  plac.log.lht  plac.nhx
data/polymorphism/: gal4.ali  gal4.newick  gal4.tsv  gal4_SEQ10_.vcf  gal4_SEQ11_.vcf  gal4_SEQ12_.vcf  gal4_SEQ13_.vcf  gal4_SEQ14_.vcf  gal4_SEQ15_.vcf  gal4_SEQ16_.vcf  gal4_SEQ17_.vcf  gal4_SEQ1_.vcf  gal4_SEQ2_.vcf  gal4_SEQ3_.vcf  gal4_SEQ4_.vcf  gal4_SEQ5_.vcf  gal4_SEQ6_.vcf  gal4_SEQ7_.vcf  gal4_SEQ8_.vcf  gal4_SEQ9_.vcf
data/small_multigene/: allENSG00000000003_TSPAN6_NT.fasta.ali  allENSG00000000005_TNMD_NT.fasta.ali  allENSG00000000457_SCYL3_NT.fasta.ali  allENSG00000000460_C1orf112_NT.fasta.ali  small.list  tree.nwk  tree.nwk.annotated  verysmall.list
data/smalltheria30/: ENSG00000020181_GPR124_filtered_NT.fasta  ENSG00000020426_MNAT1_filtered_NT.fasta  ENSG00000020577_SAMD4A_filtered_NT.fasta  ENSG00000020633_RUNX3_filtered_NT.fasta  ENSG00000020922_MRE11A_filtered_NT.fasta  ENSG00000021300_PLEKHB1_filtered_NT.fasta  ENSG00000021488_SLC7A9_filtered_NT.fasta  ENSG00000021776_AQR_filtered_NT.fasta  ENSG00000021852_C8B_filtered_NT.fasta  ENSG00000022277_C20orf43_filtered_NT.fasta  ENSG00000022355_GABRA1_filtered_NT.fasta  ENSG00000022567_SLC45A4_filtered_NT.fasta  ENSG00000022840_RNF10_filtered_NT.fasta  ENSG00000022976_ZNF839_filtered_NT.fasta  ENSG00000023041_ZDHHC6_filtered_NT.fasta  ENSG00000023171_GRAMD1B_filtered_NT.fasta  ENSG00000023228_NDUFS1_filtered_NT.fasta  ENSG00000023287_RB1CC1_filtered_NT.fasta  ENSG00000023318_ERP44_filtered_NT.fasta  ENSG00000023330_ALAS1_filtered_NT.fasta  ENSG00000023445_BIRC3_filtered_NT.fasta  ENSG00000023516_AKAP11_filtered_NT.fasta  ENSG00000023572_GLRX2_filtered_NT.fasta  ENSG00000023608_SNAPC1_filtered_NT.fasta  ENSG00000023697_DERA_filtered_NT.fasta  ENSG00000023734_STRAP_filtered_NT.fasta  ENSG00000023892_DEF6_filtered_NT.fasta  ENSG00000023902_PLEKHO1_filtered_NT.fasta  ENSG00000023909_GCLM_filtered_NT.fasta  ENSG00000024048_UBR2_filtered_NT.fasta  ENSG00000024526_DEPDC1_filtered_NT.fasta  ENSG00000024862_CCDC28A_filtered_NT.fasta  ENSG00000025039_RRAGD_filtered_NT.fasta  ENSG00000025156_HSF2_filtered_NT.fasta  ENSG00000025293_PHF20_filtered_NT.fasta  ENSG00000025434_NR1H3_filtered_NT.fasta  ENSG00000025772_TOMM34_filtered_NT.fasta  ENSG00000025796_SEC63_filtered_NT.fasta  ENSG00000025800_KPNA6_filtered_NT.fasta  ENSG00000026103_FAS_filtered_NT.fasta  (+21 more)
doc/: index.md  refactoring_guidelines.md  todo_vrac.md
pyscripts/: concat_dsomsuffstat.py  split_dsomsuffstat.py  split_nodepathsuffstat.py
sources/: .clang-format  AADiffSelCodonMatrixBidimArray.hpp  AAMutSelCodonMatrixArray.hpp  AAMutSelDSBDPOmega.cpp  AAMutSelDSBDPOmegaModel.hpp  AAMutSelDSBDPOmegaNe.cpp  AAMutSelDSBDPOmegaNeModel.hpp  AAMutSelGSBDPOmega.cpp  AAMutSelGSBDPOmegaModel.hpp  AAMutSelHyperSBDPOmega.cpp  AAMutSelHyperSBDPOmegaModel.hpp  AAMutSelM2.cpp  AAMutSelM2Model.hpp  AAMutSelM2a.cpp  AAMutSelM2aModel.cpp  AAMutSelM2aModel.hpp  AAMutSelMaskOmega.cpp  AAMutSelMaskOmegaModel.hpp  AAMutSelNeCodonMatrixBidimArray.hpp  AAMutSelOmega.cpp  AAMutSelOmegaCodonSubMatrix.cpp  AAMutSelOmegaCodonSubMatrix.hpp  AAMutSelOmegaCodonSubMatrixBidimArray.hpp  AAMutSelOmegaModel.hpp  AAMutSelPolyMutCodonMatrixBidimArray.hpp  AAMutSelPolyMutOmegaCodonSubMatrix.hpp  AAMutSelSBDPOmega.cpp  AAMutSelSBDPOmegaModel.hpp  AAMutSelSBDPOmegaSitewise.cpp  AAMutSelSBDPOmegaSitewiseModel.hpp  AAMutSelSparseM9.cpp  AAMutSelSparseM9Model.hpp  AAMutSelSparseOmega.cpp  AAMutSelSparseOmegaModel.hpp  AAMutSelSubMatrix.cpp  AAMutSelSubMatrix.hpp  AAMutSelSubMatrixArray.hpp  AAProjectedCodonSubMatrix.hpp  AASubSelSubMatrix.cpp  AASubSelSubMatrix.hpp  (+347 more)
sources.flat/: BranchSitePath.cpp  BranchSitePath.hpp  CodonSubMatrix.hpp  DiffSelModel.hpp  GTRSubMatrix.hpp  MultiGeneSingleOmegaModel.hpp  PhyloProcess.cpp  PhyloProcess.hpp  PoissonSuffStat.hpp  SingleOmegaModel.hpp  SubMatrix.cpp  SubMatrix.hpp
sources/codonm8/: CodonM8.d  CodonM8Model.hpp  MultiGeneCodonM8.cpp  MultiGeneCodonM8.d
src/: AAMutSelDM5.cpp  AAMutSelDM5Model.hpp  AAMutSelDSBDPOmega.cpp  AAMutSelDSBDPOmegaModel.hpp  AAMutSelMultipleOmega.cpp  AAMutSelMultipleOmegaModel.hpp  CodonM2a.cpp  CodonM2aModel.cpp  CodonM2aModel.hpp  DatedBranchMutSel.cpp  DatedBranchMutSelModel.hpp  DatedBranchOmega.cpp  DatedBranchOmegaModel.hpp  DatedMutSel.cpp  DatedMutSelModel.hpp  DatedNode.cpp  DatedNodeModel.hpp  DatedNodeMutSel.cpp  DatedNodeMutSelModel.hpp  DatedNodeOmega.cpp  DatedNodeOmegaModel.hpp  DiffSelDoublySparse.cpp  DiffSelDoublySparseModel.hpp  DiffselDoubleSparseConfig.hpp  Doxyfile  InferenceAppArgParse.hpp  LegacyArrayProxy.hpp  M2aMix.hpp  MultiGeneCodonM2a.cpp  MultiGeneCodonM2aModel.hpp  MultiGeneSingleOmega.cpp  MultiGeneSingleOmegaModel.hpp  MultiGeneSingleOmegaModelNew.hpp  MultiGeneSingleOmegaNew.cpp  ReadAAMutSelDM5.cpp  ReadAAMutSelDSBDPOmega.cpp  ReadAAMutSelMultipleOmega.cpp  ReadCodonM2a.cpp  ReadDatedBranchMutSel.cpp  ReadDatedMutSel.cpp  (+17 more)
src/components/: AcceptanceStats.hpp  BaseArgParse.hpp  ChainCheckpoint.hpp  ChainComponent.hpp  ChainDriver.hpp  ChainReader.hpp  ConsoleLogger.hpp  InferenceAppArgParse.hpp  Logger.hpp  MoveScheduler.hpp  ReadArgParse.hpp  Tracer.hpp  (+15 more)
utils/: calibs_coevol_to_mutsel.py  doctest.h  fasta_to_ali.py  fitness_to_selcoeff.py  neutrality_index.py  nhx-parser.hpp  plot_tree.py  ratio_pvalue.py  traits_coevol_to_mutsel.py
(+175 files in other folders)
